<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokNumber">#898</string>
    <string name="pokeName">Pokemon</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="sp_atk">Sp. Atk:</string>
    <string name="sp_def">Sp. Def:</string>
    <string name="speed">Speed:</string>
</resources>